samples/_failures_safe/1761090919_a6a1c5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b6082fcd.c: In function ‘main’:
./samples/SAFE/__tmp_b6082fcd.c:151:9: error: expected expression at end of input
  151 |         if (scanf("%d",
      |         ^~
./samples/SAFE/__tmp_b6082fcd.c:151:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b6082fcd.c:151:9: error: expected declaration or statement at end of input
